# CodingClaw

./: .env.example  .gitignore  README.md  pyproject.toml
codingclaw/: __init__.py  cli.py  config.py  errors.py  unicode.py
codingclaw/agent/: __init__.py  agent.py  events.py  loop.py  types.py
codingclaw/hooks/: __init__.py  registry.py
codingclaw/llm/: __init__.py  client.py  tokens.py  types.py
codingclaw/sandbox/: __init__.py  commands.py  paths.py  policy.py
codingclaw/session/: compaction.py  context.py  resources.py  session.py  session_store.py  skills.py  system_prompt.py
codingclaw/tools/: __init__.py  base.py  command_tools.py  file_tools.py  registry.py
codingclaw/trace/: __init__.py  logger.py  types.py
evals/: README.md  context_cases.json  eval_cases.json  swebench_lite_random_20.json  swebench_lite_random_5.json
scripts/: run_context_evals.py  run_evals.py  run_swebench.py
tests/: test_agent_loop.py  test_cli.py  test_compaction.py  test_eval_runners.py  test_sandbox.py  test_session.py  test_skills.py  test_system_prompt.py  test_tools.py  test_unicode.py
