[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codingclaw"
version = "0.1.0"
description = "A minimal Pi-like Python coding agent harness."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CodingClaw" }]
dependencies = []

[project.scripts]
codingclaw = "codingclaw.cli:main"

[tool.setuptools.packages.find]
include = ["codingclaw*"]
